# myCode_repository

./: .gitignore  README.md  lists.txt  package-lock.json  package.json
RCA/: README.md  device_name.cfg  division_info_redis.sh  sort_by_warning.sh
antlr4_cpp/: CMakeLists.txt  README.md  build_for_test.sh
antlr4_cpp/cpp/: CMakeLists.txt  CPP14.g4  generate.sh  main.cpp
antlr4_cpp/create_sql_xml_tool/: CMakeLists.txt  SqlXml.g4  SqlXmlLexer.g4  SqlXmlParser.g4  generate.sh  main.cpp  mask_function_gauss200.sql  tmp.sql
antlr4_cpp/db2/: Db2SqlLexer.g4  Db2SqlParser.g4  generate.sh  ttt
antlr4_cpp/demo/: CMakeLists.txt  TParser.g4  generate.sh
antlr4_cpp/dynamic_scope/: CMakeLists.txt  DynScope.g4  main.cpp
antlr4_cpp/expression/: CMakeLists.txt  Expr.g4  generate.sh  main.cpp
antlr4_cpp/expression/expr_parser/: expr_get_value_listener.hpp  pre_order_parser_tree_walker.hpp  walker_listener.hpp
antlr4_cpp/gauss200/: CMakeLists.txt  Gauss200Lexer.g4  Gauss200Parser.g4  generate.sh  main.cpp
antlr4_cpp/gauss200/examples/: example.txt  gaussdb200.sql  get_all_sqls.sh
antlr4_cpp/gauss200/keyword/: gen_kw.sh  kw.txt  nonreserved.txt  nonreserved_can_not_be_name.txt  parser_kw.txt  reserved.txt  reserved_can_be_name.txt
antlr4_cpp/greenplum/: CMakeLists.txt  GreenPlumLexer.g4  GreenPlumParser.g4  expr.g4  gen_tokens.sh  generate.sh  main.cpp  tmp  tmp1  tokens
antlr4_cpp/greenplum/gp_parser/: column_relation_dag.h  greenplum_get_dag_listener.hpp  item.h
antlr4_cpp/hive/: CMakeLists.txt  Hplsql.g4  HqlsqlLexer.g4  HqlsqlParser.g4  generate.sh  hive_test.sql  main.cpp  separate_debug_info.sh
antlr4_cpp/hive/bak/: hive_get_column_dag.cpp
antlr4_cpp/hive/hqlparse/: IParser.cpp  IParser.h  column_relation_dag.h  error_verbose_listener.hpp  get_operate_info_from_dag.cpp  get_operate_info_from_dag.h  get_operate_info_listener.cpp  get_operate_info_listener.h  hive_get_column_dag.cpp  hive_get_column_dag.h  item.h
antlr4_cpp/kingbase/: CMakeLists.txt  KingbaseQueryParser.g4  KingbaseSqlBaseLexer.h  KingbaseSqlParser.g4  generate.sh  main.cpp
antlr4_cpp/kingbase/kingbaseparser/: item.h  kingbase_from_clause_matcher_listener.h  kingbase_get_column_dag_listener.hpp  kingbase_mask_listener.h
antlr4_cpp/math/: CMakeLists.txt  Math.g4  generate.sh  main.cpp
antlr4_cpp/math/ast/: abstract_ast_visitor.hpp  abstract_expression_node.hpp  ast_visitor.hpp  build_math_ast_visitor.hpp  expression_node.hpp
antlr4_cpp/monolithic_scope/: CMakeLists.txt  Cymbol.g4  abstract_symbol.hpp  builtin_type_symbol.hpp  generate.sh  main.cpp  scope.hpp  symbol.hpp  symbol_table.hpp  type.hpp  variable_symbol.hpp
antlr4_cpp/mysql/: CMakeLists.txt
antlr4_cpp/mysql/g4mysql/: MySQLLexer.g4  MySQLParser.g4  generate.sh
antlr4_cpp/mysql/test/: CMakeLists.txt  main.cpp
antlr4_cpp/mysql/test/mysql_parser/: error_verbose_listener.h
antlr4_cpp/mysql/test/mysql_parser/ast/: sql_object.cpp  sql_object.h
antlr4_cpp/mysql/test/mysql_parser/ast/expr/: sql_expr.cpp  sql_expr.h  sql_expr_impl.cpp  sql_expr_impl.h  sql_in_list_expr.cpp  sql_in_list_expr.h  sql_in_subquery_expr.cpp  sql_in_subquery_expr.h  sql_is_expr.cpp  sql_is_expr.h  sql_not_expr.cpp  sql_not_expr.h
antlr4_cpp/mysql/test/mysql_parser/visitor/: sql_ast_visitor.cpp  sql_ast_visitor.h
antlr4_cpp/mysql_shardingsphere/: MySQLStatementLexer.g4  MySQLStatementParser.g4  generate.sh
antlr4_cpp/oracle/: CMakeLists.txt  PlSqlLexer.g4  PlSqlParser.g4  generate.sh  main.cpp  test.sql
antlr4_cpp/oracle/plsql/: column_relation_dag.h  common.h  from_clause_matcher_listener.cpp  from_clause_matcher_listener.h  get_table_listener.h  item.h  mask_listener.h  oracle_get_column_dag_listener.hpp  oracle_mask_listener.h  oracle_parse_tree_walker.cpp  oracle_parse_tree_walker.hpp  oracle_replace_star_listener.hpp
antlr4_cpp/plpgsql/: CMakeLists.txt  generate.sh  main.cpp  plpgsql.g4
antlr4_cpp/replace_column/: CMakeLists.txt  KingbaseSqlBaseParser.h  KingbaseSqlLexer.g4  KingbaseSqlParser.g4  main.cpp
antlr4_cpp/replace_column/kingbaseparser/: column_item.h  column_relation_dag.h  item.h  kingbase_get_column_dag_listener.hpp  kingbase_get_selected_list_listener.hpp  kingbase_get_table_listener.h  kingbase_mask_listener.h  kingbase_test_listener.hpp  tags
antlr4_cpp/runtime/: CMakeLists.txt
antlr4_cpp/test/: TParser.g4
antlr4_cpp/tool1/: CMakeLists.txt  Tool1.g4  tttt.g4
antlr4_cpp/vertica/: VerticaSqlLexer.g4  VerticaSqlParser.g4  generate.sh
assemble_wangshuang/: 1.asm  10_12.asm  10_2.asm  10_3.asm  10_subProgram.asm  9.asm  9_1.asm  LOOP1.asm  LOOP2.asm  LOOP3.asm  LoopShowStrInt7ch.asm  Q7_9.asm  Table1.asm  average_salary.asm  dateFromCMOS.asm  hello.asm  helloworld.asm  install_int7c.asm  itoa.asm  loop4.asm  loop5.asm  loopAsInt7ch.asm  mulFuncInt7ch.asm  myDiv.asm  readFromCMOS.asm  shiyan8.asm  t1.asm  test_int7ch.asm  toLowcase.asm
c++/get_type/: get_type.cpp
c/utf8_encoding/: test.txt  utf8_toupper.c
cbc/: ChangeLog
code_gen/template/: cpp.config  file_head.template  gen_code.sh
dict/: Makefile  common.c  common.h  dict.c  dict.h  tags  word_count.c  word_count.h
language_implementation_pattern/chapter3/backtrace/: CMakeLists.txt  ListWithParallelAssign.g  backtrace_parser.hpp  lexer.hpp  main.cpp  parser.hpp
language_implementation_pattern/sql_query/: .parser.hpp.swp  .sqlquery_parser.hpp.swp  CMakeLists.txt  README.md  SqlQuery.g4  SqlQueryLexer.g4  SqlQueryParser.g4  TODO.txt  main.cpp  parser.hpp  sql1999.g4  sqlquery_lexer.hpp  sqlquery_parser.hpp  token.hpp  tttt
language_implementation_pattern/sql_query/parser/: .sqlquery_parser.cpp.swp  .sqlquery_parser.hpp.swp  common_token_stream.cpp  common_token_stream.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  sqlquery_lexer.cpp  sqlquery_lexer.hpp  sqlquery_parser.cpp  sqlquery_parser.hpp  token.hpp
minicrt/c/: Makefile  entry.c  malloc.c  minicrt.h  printf.c  stdio.c  string.c
minicrt/cpp/: Makefile  atexit.c  crtbegin.cpp  crtend.cpp  (+12 more)
statusCheck/: Makefile  README.md
studentManageSystem/: Makefile  main.c  stuinfoMS.c  stuinfoMS.h
(+143 files in other folders)
